finished file io

--- a/notebook/demo_v1.ipynb
+++ b/notebook/demo_v1.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 84,
    "metadata": {
     "scrolled": true
    },
@@ -119,10 +119,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x110afc160>"
+       "<IPython.lib.display.IFrame at 0x1a23610e48>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,11 +522,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd ## import the pandas library"
+    "import pandas as pd ## import the pandas library\n",
+    "\n",
+    "# show complete dataframe content\n",
+    "pd.options.display.max_columns = None\n",
+    "pd.options.display.max_rows = None\n",
+    "pd.set_option('display.max_colwidth', -1)"
    ]
   },
   {
@@ -1806,24 +1811,275 @@
    "source": [
     "## 2. File Input/Output\n",
     "\n",
-    "* Read file\n",
-    "* Write file\n",
-    "* Pandas dataframe example"
+    "* Read a file\n",
+    "    * President Trump's inauguration speech (2017)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chief Justice Roberts, President Carter, President Clinton, President Bush, President Obama, fellow Americans, and people of the world: thank you.\n",
+      "\n",
+      "\n",
+      "\n",
+      "We, the citizens of America, are now joined in a great national effort to rebuild our country and to restore its promise for all of our people.\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('../data/trump_inauguration.txt','r') as f:\n",
+    "    for index,line in enumerate(f.readlines()):\n",
+    "        if index<4:\n",
+    "            print(line)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "* Write to a file\n",
+    "    * Example: Count word frequency and write result to a text file"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## count the word frequency\n",
+    "dict_freq = {}\n",
+    "\n",
+    "with open('../data/trump_inauguration.txt','r') as f:\n",
+    "    for line in f.readlines():\n",
+    "        words = line.lower().split()\n",
+    "        for word in words:\n",
+    "            word2 = word.strip('\"').strip(\"'\").replace(',','').replace('.','').replace(';','').replace('–','')\n",
+    "            if len(word2)>0:\n",
+    "                if dict_freq.get(word2,-10000)==-10000:\n",
+    "                    dict_freq[word2]=1\n",
+    "                else:\n",
+    "                    dict_freq[word2]=dict_freq[word2]+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## write to txt file\n",
+    "with open('../data/word_count_out.csv','w') as f:\n",
+    "    for key,value in dict_freq.items():\n",
+    "        f.write('{word},{freq}\\n'.format(word=key,freq=value))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chief,1\n",
+      "justice,1\n",
+      "roberts,1\n",
+      "president,5\n",
+      "carter,1\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "## check the file content\n",
+    "import subprocess\n",
+    "result = subprocess.check_output('head -5 ../data/word_count_out.csv',shell=True).decode('utf-8')\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "* File analysis with Pandas dataframe\n",
+    "    * Example: Find the most frequent words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>word</th>\n",
+       "      <th>freq</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>chief</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>justice</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>roberts</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      word  freq\n",
+       "0  chief    1   \n",
+       "1  justice  1   \n",
+       "2  roberts  1   "
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('../data/word_count_out.csv',sep=',',header=None,names=['word','freq'])\n",
+    "df.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction import stop_words\n",
+    "df2 = df.loc[~df.word.isin(\n",
+    "    stop_words.ENGLISH_STOP_WORDS\n",
+    ")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>word</th>\n",
+       "      <th>freq</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>america</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>american</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>country</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>people</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>great</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         word  freq\n",
+       "19   america   17  \n",
+       "101  american  12  \n",
+       "31   country   9   \n",
+       "11   people    9   \n",
+       "25   great     6   "
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.sort_values(by='freq',ascending=False).head(5)"
+   ]
   },
   {
    "cell_type": "markdown",
