finished web scraping session

--- a/notebook/demo_v1.ipynb
+++ b/notebook/demo_v1.ipynb
@@ -2005,7 +2005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -2059,26 +2059,56 @@
        "      <td>great</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>315</th>\n",
+       "      <td>new</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171</th>\n",
+       "      <td>nation</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>world</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>president</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142</th>\n",
+       "      <td>right</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         word  freq\n",
-       "19   america   17  \n",
-       "101  american  12  \n",
-       "31   country   9   \n",
-       "11   people    9   \n",
-       "25   great     6   "
+       "          word  freq\n",
+       "19   america    17  \n",
+       "101  american   12  \n",
+       "31   country    9   \n",
+       "11   people     9   \n",
+       "25   great      6   \n",
+       "315  new        6   \n",
+       "171  nation     6   \n",
+       "41   world      5   \n",
+       "3    president  5   \n",
+       "142  right      5   "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2.sort_values(by='freq',ascending=False).head(5)"
+    "df2.sort_values(by='freq',ascending=False).head(10)"
    ]
   },
   {
@@ -2114,21 +2144,210 @@
     "## 4. Webpage crawling\n",
     "\n",
     "* Common tools\n",
-    "* Regex match\n",
-    "* Example (www.advantage.com, grab all car rental addresses)\n"
+    "    * requests, beautifulsoup, etc.\n",
+    "    * regex match (re)\n",
+    "* Example (www.advantage.com, grab all car rental location information)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
+   "metadata": {
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"1400\"\n",
+       "            height=\"700\"\n",
+       "            src=\"https://www.advantage.com/us-location/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x105cebfd0>"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import IFrame\n",
+    "IFrame(\"https://www.advantage.com/us-location/\", width=1400, height=700)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
+   "source": [
+    "![title](../pics/html_locations.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [],
    "source": [
-    "IFrame(\"https://www.advantage.com/us-location/\", width=1400, height=400)"
+    "import urllib\n",
+    "import re\n",
+    "\n",
+    "base = 'https://www.advantage.com/us-location/'\n",
+    "res = urllib.request.urlopen(base)\n",
+    "html = res.read().decode('utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Phoenix Skyharbor Intl Airport',\n",
+       " 'Los Angeles International Airport',\n",
+       " 'San Diego International Airport',\n",
+       " 'San Francisco International Airport',\n",
+       " 'Sacramento International Airport']"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## step 1: get all car rental locations\n",
+    "airports = re.findall(\n",
+    "    'fa fa\\-map\\-marker\" aria\\-hidden=\"true\"></i>\\s*?<p>(.*?)</p>',\n",
+    "    html\n",
+    ")\n",
+    "airports[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "![title](../pics/html_locations.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/location/phoenix-sky-harbor-airport-phx',\n",
+       " '/location/los-angeles-intl-airport-lax',\n",
+       " '/location/san-diego-intl-airport-san',\n",
+       " '/location/san-francisco-airport-sfo',\n",
+       " '/location/sacramento-intl-airport-smf']"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## step 2: get all page links for car rental locations\n",
+    "paths = re.findall(\n",
+    "    'href=\"?(.*)\"\\s*class=\"aez-icon-location\"',\n",
+    "    html\n",
+    ")\n",
+    "paths[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "![title](../pics/html_address.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https://www.advantage.com/us-location/phoenix-sky-harbor-airport-phx',\n",
+       " 'https://www.advantage.com/us-location/los-angeles-intl-airport-lax',\n",
+       " 'https://www.advantage.com/us-location/san-diego-intl-airport-san']"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## step 3: get the address\n",
+    "paths_full = [\n",
+    "    base + path.split('/')[-1]\n",
+    "    for path in paths\n",
+    "]\n",
+    "paths_full[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('1805 East Sky Harbor Circle S', 'Phoenix AZ 85034 US')]"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path2search = 'https://www.advantage.com/us-location/phoenix-sky-harbor-airport-phx'\n",
+    "html = urllib.request.urlopen(path2search).read().decode('utf-8')\n",
+    "address = re.findall('Address:</h4>\\s*<p class=\"aez\\-info\\-text\">(.*?)<br>(.*?)<br>',html)\n",
+    "address"
    ]
   },
   {
