finished mysql piece

--- a/notebook/demo_v1.ipynb
+++ b/notebook/demo_v1.ipynb
@@ -2122,16 +2122,159 @@
     "## 3. Database Connection\n",
     "\n",
     "* Common tools\n",
+    "    * pyodbc\n",
+    "    * sqlalchemy\n",
+    "    * ...\n",
     "* MySQL example\n",
-    "* AWS example"
+    "    * library: mysqlclient (https://pypi.org/project/mysqlclient/)\n",
+    "\n",
+    "    ![title](../pics/mysql_query.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 139,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "import MySQLdb\n",
+    "import pandas as pd\n",
+    "\n",
+    "# create the database connection\n",
+    "db = MySQLdb.connect(host=\"localhost\",\n",
+    "                     user=\"test123\",\n",
+    "                     passwd=\"1234\")\n",
+    "# query database, get output as a dataframe\n",
+    "df = pd.read_sql('select * from adhoc.word_count',db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>word</th>\n",
+       "      <th>freq</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>america</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>american</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>353</th>\n",
+       "      <td>people</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>country</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>209</th>\n",
+       "      <td>great</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>320</th>\n",
+       "      <td>new</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>312</th>\n",
+       "      <td>nation</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>362</th>\n",
+       "      <td>president</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>287</th>\n",
+       "      <td>make</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142</th>\n",
+       "      <td>dreams</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          word  freq\n",
+       "20     america    17\n",
+       "21    american    12\n",
+       "353     people     9\n",
+       "106    country     9\n",
+       "209      great     6\n",
+       "320        new     6\n",
+       "312     nation     6\n",
+       "362  president     5\n",
+       "287       make     5\n",
+       "142     dreams     5"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## another way\n",
+    "# create a cursor to execute query\n",
+    "cur = db.cursor()\n",
+    "cur.execute(\"select * from adhoc.word_count\")\n",
+    "result = list(cur.fetchall())\n",
+    "df = pd.DataFrame(result,columns=['word','freq'])\n",
+    "df.sort_values(by='freq',ascending=False).head(10)\n",
+    "# remove the stop words\n",
+    "from sklearn.feature_extraction import stop_words\n",
+    "df2 = df.loc[~df.word.isin(\n",
+    "    stop_words.ENGLISH_STOP_WORDS\n",
+    ")]\n",
+    "df2.sort_values(by='freq',ascending=False).head(10)"
+   ]
   },
   {
    "cell_type": "markdown",
